app/assets/stylesheets/molecules/_reveal.scss
.reveal__link {
  @include outline;
  display: inline-block;
  text-decoration: none;
  color: $color-teal-dark;
  border: 2px solid $color-teal-dark;
  background-color: $color-teal-light;
  border-radius: 10px;
  padding: .2em .5em .3em .7em;
  font-size: $font-size-25-small;

  &:after {
    position: relative;
    top: .1em;
    font-family: $font-icon;
    content: '\a0'+map_get($icons, keyboard_arrow_down);
  }
}

.reveal__content {
  margin-top: $s15;
  background-color: $color-background;
  border: 2px solid $color-grey;
  border-radius: $border-radius-large;
  padding: $s15;
  font-size: $font-size-25-small;
  *:last-child {
    margin-bottom: 0;
  }
}

.reveal {
  margin-bottom: 1em;
  &.is-hidden {
    .reveal__link {
      &:after {
        content: '\a0'+map_get($icons, keyboard_arrow_right);
      }
    }
    .reveal__content {
      display: none;
    }
  }
}

